query/gha: change branch prefix to fiotestbot
The fiotestbot- prefix is more unusual and less likely to lead to
possible name collisions with actual branch names.

Signed-off-by: Vincent Fu <vincent.fu@samsung.com>

--- a/.github/workflows/fiotestbot.yml
+++ b/.github/workflows/fiotestbot.yml
@@ -94,6 +94,6 @@ jobs:
     - name: Create a new branch and push it
       run: |
         echo ${{ matrix.msg_id }}
-        git checkout -b test-${{ matrix.msg_id }}
+        git checkout -b fiotestbot-${{ matrix.msg_id }}
         b4 am -3 -o - "${{ matrix.msg_id }}" | git am --whitespace=fix
-        git push origin test-${{ matrix.msg_id }}
+        git push origin fiotestbot-${{ matrix.msg_id }}
