--- a/.github/workflows/fiotestbot.yml
+++ b/.github/workflows/fiotestbot.yml
@@ -2,8 +2,8 @@ name: fiotestbot
 
 on:
   workflow_dispatch:
-# schedule:
-#   - cron: "* /15 * * *" # every 15 minutes
+  schedule:
+    - cron: "*/15 * * * *" # every 15 minutes
 
 permissions:
   contents: write
